--- a/server-service/build.gradle
+++ b/server-service/build.gradle
@@ -32,6 +32,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // S3
+    implementation 'io.awspring.cloud:spring-cloud-aws-s3:3.0.2'
 }
 
 tasks.named('test') {
