--- a/user-service/src/main/resources/application.yaml
+++ b/user-service/src/main/resources/application.yaml
@@ -24,23 +24,29 @@ spring:
     hibernate:
       ddl-auto: create
   mail:
-    host:
-    port:
-    username:
-    password:
+    host: smtp.gmail.com
+    port: 587
+    username: homelesscode.noreply@gmail.com
+    password: cpgh cvxh fsiq yifi
+    protocol: smtp
     properties:
       mail:
         smtp:
           auth: true
-          starttls.enable: true
-          debug: true # ??? ??? (?? ?? ? ?? ???)
+          starttls:
+            enable: true
+            required: true
+          connectiontimeout: 5000
+          timeout: 5000
+          writetimeout: 5000
+
 
 security:
   excluded-paths:
-    - /user/signup
-    - /user/confirm
-    - /user/signin
-    - /user/duplicate/*
+    - /api/v1/user/sign-up
+    - /api/v1/user/confirm
+    - /api/v1/user/sign-in
+    - /api/v1/user/duplicate
 
 #eureka:
 #client:
