--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
         cors-configurations:
           "[/**]": # 모든 경로에 대한 CORS 설정
             allowed-origins:
-              # - "http://localhost:3000"
+              - "http://localhost:3000"
               # - 나중에 도메인
             allowed-methods:
               - GET
@@ -43,53 +43,26 @@ spring:
             - RewritePath=/user-service/(?<segment>.*), /$\{segment}
             - AuthorizationHeaderFilter
 
-        - id: user-service
-          uri: lb://USER-SERVICE
-          predicates:
-            - Path=/user-service/actuator/**
-          filters:
-            - RemoveRequestHeader=Cookie
-            - RewritePath=/user-service/(?<segment>.*), /$\{segment}
-            - AuthorizationHeaderFilter
 
 
         - id: chat-service
           uri: lb://CHAT-SERVICE
           predicates:
-            - Path=/chat-service/**
+            - Path=/api/chats/**
           filters:
             - RemoveRequestHeader=Cookie
             - RewritePath=/chat-service/(?<segment>.*), /$\{segment}
             - AuthorizationHeaderFilter
 
-        - id: chat-service
-          uri: lb://CHAT-SERVICE
-          predicates:
-            - Path=/chat-service/actuator/**
-          filters:
-            - RemoveRequestHeader=Cookie
-            - RewritePath=/chat-service/(?<segment>.*), /$\{segment}
-            - AuthorizationHeaderFilter
-
-
-
         - id: server-service
-          uri: lb://SERVER-SERVICE
+          uri: lb://server-service
           predicates:
-            - Path=/server-service/**
+            - Path=/server/**
           filters:
             - RemoveRequestHeader=Cookie
             - RewritePath=/server-service/(?<segment>.*), /$\{segment}
-            - AuthorizationHeaderFilter
-            -
-        - id: server-service
-          uri: lb://SERVER-SERVICE
-          predicates:
-            - Path=/server-service/actuator/**
-          filters:
-            - RemoveRequestHeader=Cookie
-            - RewritePath=/server-service/(?<segment>.*), /$\{segment}
-            - AuthorizationHeaderFilter
+#            - AuthorizationHeaderFilter
+
 
 
 # log level setting
