유저설정 수정 후 msa 구동 확인

--- a/config-serivce/src/main/resources/application.yml
+++ b/config-serivce/src/main/resources/application.yml
@@ -7,8 +7,10 @@ spring:
   cloud:
     config:
       server:
+        native:
+          search-locations: file://D:/home/homeless-code-config
         git:
-          uri: file://C:/Users/gingu/Desktop/develop/homeless-code-config
+          uri: file://D:/home/homeless-code-config
 
 management:
   endpoints:
