--- a/server-service/build.gradle
+++ b/server-service/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.3.4'
-    id 'io.spring.dependency-management' version '1.1.6'
+    id 'org.springframework.boot' version '3.2.11'
+    id 'io.spring.dependency-management' version '1.1.7'
 }
 
 group = 'com.homelessCode'
@@ -40,11 +40,17 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
     // S3
     implementation 'io.awspring.cloud:spring-cloud-aws-s3:3.0.2'
+
+    implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
+
+
 }
 
 dependencyManagement {
     imports {
-        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2023.0.0"  // Spring Cloud BOM 추가
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"  // Spring Cloud BOM 추가
     }
 }
 
