--- a/server-service/src/main/resources/bootstrap.yml
+++ b/server-service/src/main/resources/bootstrap.yml
@@ -6,6 +6,6 @@ spring:
     name: server-service
   cloud:
     config:
-      #      uri: http://localhost:8888
-      uri: http://config-service:8888
+      uri: http://localhost:8888
+#      uri: http://config-service:8888
       profile: default
