--- a/user-service/src/main/resources/bootstrap.yml
+++ b/user-service/src/main/resources/bootstrap.yml
@@ -6,6 +6,6 @@ spring:
     name: user-service
   cloud:
     config:
-      #      uri: http://localhost:8888
-      uri: http://config-service:8888
+      uri: http://localhost:8888
+#      uri: http://config-service:8888
       profile: default
