--- a/config-serivce/src/main/resources/application.yml
+++ b/config-serivce/src/main/resources/application.yml
@@ -8,9 +8,9 @@ spring:
     config:
       server:
         native:
-          search-locations: file://D:/home/homeless-code-config
+          search-locations: file://C:/home/homeless-code-config
         git:
-          uri: file://D:/home/homeless-code-config
+          uri: file://C:/home/homeless-code-config
 
 management:
   endpoints:
