--- a/server-service/src/main/resources/application.yml
+++ b/server-service/src/main/resources/application.yml
@@ -7,16 +7,10 @@ spring:
   config:
     import: "optional:configserver:"
 
-  datasource:
-    url: jdbc:mysql://localhost:3306/homeless_code?serverTimezone=Asia/Seoul
-    username: root
-    password: mysql
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  jpa:
-    database: mysql
-    database-platform: org.hibernate.dialect.MySQL8Dialect
-    hibernate:
-      ddl-auto:  create
 
+  mvc:
+    hiddenmethod:
+      filter:
+        enabled: true
 
 
