--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
         cors-configurations:
           "[/**]": # 모든 경로에 대한 CORS 설정
             allowed-origins:
-              # - "http://localhost:3000"
+              - "http://localhost:3000"
               # - 나중에 도메인
             allowed-methods:
               - GET
@@ -76,11 +76,11 @@ spring:
         - id: server-service
           uri: lb://SERVER-SERVICE
           predicates:
-            - Path=/server-service/**
+            - Path=/server/**
           filters:
             - RemoveRequestHeader=Cookie
             - RewritePath=/server-service/(?<segment>.*), /$\{segment}
-            - AuthorizationHeaderFilter
+            # AuthorizationHeaderFilter
 
         - id: server-service
           uri: lb://SERVER-SERVICE
@@ -89,7 +89,7 @@ spring:
           filters:
             - RemoveRequestHeader=Cookie
             - RewritePath=/server-service/(?<segment>.*), /$\{segment}
-            - AuthorizationHeaderFilter
+            #- AuthorizationHeaderFilter
 
 
 # log level setting
