0103 트러블 슈팅  - 게이트웨이 - 세큐리티 cors
1. 게이트웨이에서 api/v1/user 을 api/v1/users라고 고쳤어야함.
2. 해당 서비스 securityConfig에서 user -> users라고 고쳐야함.
3. 해당 서비스 yaml에서 security:
  excluded-paths: 에 url users 로 고쳐야함.

4. 새로생긴 tbl_users에 계정을 만들어놨어야함.
(user인줄알고 계속 로그인만했음)

--- a/user-service/src/main/resources/application.yaml
+++ b/user-service/src/main/resources/application.yaml
@@ -43,10 +43,11 @@ spring:
 
 security:
   excluded-paths:
-    - /api/v1/user/sign-up
-    - /api/v1/user/confirm
-    - /api/v1/user/sign-in
-    - /api/v1/user/duplicate
+    - /api/v1/users/sign-up
+    - /api/v1/users/confirm
+    - /user-service/api/v1/users/sign-in
+    - /api/v1/users/sign-in
+    - /api/v1/users/duplicate
 
 instance:
   instance-id: ${spring.cloud.client.hostname}:${spring.application.instance_id:${random.value}}
