--- a/user-service/src/main/resources/application.yaml
+++ b/user-service/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ spring:
   web:
     cors:
       allowed-origins: "*"
-      allowed-methods: "GET,POST,PUT,DELETE"
+      allowed-methods: "GET,POST,PUT,DELETE,PATCH"
       allowed-headers: "*"
       exposed-headers: "Authorization"
       allow-credentials: true
