--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -18,6 +18,7 @@ spring:
               - PUT
               - DELETE
               - OPTIONS
+              - PATCH
             allowed-headers:
               - "Content-Type"
               - "Authorization"
