--- a/chat-service/build.gradle
+++ b/chat-service/build.gradle
@@ -58,6 +58,9 @@ dependencies {
     implementation 'javax.persistence:javax.persistence-api:2.2'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'io.awspring.cloud:spring-cloud-aws-s3:3.0.2'
+    implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final'
+    implementation 'javax.validation:validation-api:2.0.1.Final'
+
 }
 
 dependencyManagement {
