--- a/chat-service/build.gradle
+++ b/chat-service/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation 'io.awspring.cloud:spring-cloud-aws-s3:3.0.2'
     implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final'
     implementation 'javax.validation:validation-api:2.0.1.Final'
+    implementation 'org.springframework:spring-websocket'
 
 }
 
