--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -10,6 +10,7 @@ spring:
         cors-configurations:
           "[/**]": # 모든 경로에 대한 CORS 설정
             allowed-origins:
+              - "https://jiangxy.github.io"
               - "http://localhost:3000"
               # - 나중에 도메인
             allowed-methods:
@@ -44,7 +45,11 @@ spring:
             - RewritePath=/user-service/(?<segment>.*), /$\{segment}
             - AuthorizationHeaderFilter
 
-
+        # 채팅 서비스(웹소켓)
+        - id: chat-service-ws
+          predicates:
+            - Path=/ws, /ws/**
+          uri: lb://CHAT-SERVICE
 
         - id: chat-service
           uri: lb://CHAT-SERVICE
