--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -9,8 +9,7 @@ spring:
       globalcors:
         cors-configurations:
           "[/**]": # 모든 경로에 대한 CORS 설정
-            allowed-origins:
-              - "http://localhost:3000"
+            allowed-origins: "http://localhost:3000"
               # - 나중에 도메인
             allowed-methods:
               - GET
