--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -1,8 +1,6 @@
 server:
   port: 8181
 
-
-
 spring:
   application:
     name: gateway-service
@@ -45,13 +43,8 @@ spring:
           filters:
             - RemoveRequestHeader=Cookie
             - RewritePath=/user-service/(?<segment>.*), /$\{segment}
-            - AuthorizationHeaderFilter
+            #- AuthorizationHeaderFilter
 
-        # 채팅 서비스(웹소켓)
-        - id: chat-service-ws
-          predicates:
-            - Path=/ws, /ws/**
-          uri: lb://CHAT-SERVICE
 
         - id: chat-service
           uri: lb://CHAT-SERVICE
@@ -60,7 +53,7 @@ spring:
           filters:
             - RemoveRequestHeader=Cookie
             - RewritePath=/chat-service/(?<segment>.*), /$\{segment}
-            #- AuthorizationHeaderFilter
+            - AuthorizationHeaderFilter
 
         - id: chat-service
           uri: lb://CHAT-SERVICE
@@ -69,16 +62,17 @@ spring:
           filters:
             - RemoveRequestHeader=Cookie
             - RewritePath=/chat-service/(?<segment>.*), /$\{segment}
-            #- AuthorizationHeaderFilter
+            - AuthorizationHeaderFilter
 
             # 채팅 서비스(웹소켓)
         - id: chat-service-ws
           predicates:
-            - Path=/chat-service/ws/**
+            - Path=/chat-service/ws/**, /ws/**
           uri: lb://CHAT-SERVICE
           filters:
             - RemoveRequestHeader=Cookie
             - RewritePath=/chat-service/(?<segment>.*), /$\{segment}
+            #- AuthorizationHeaderFilter
 
 
 
