--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -9,8 +9,8 @@ spring:
       globalcors:
         cors-configurations:
           "[/**]": # 모든 경로에 대한 CORS 설정
-            allowed-origins: "http://localhost:3000"
-              # - 나중에 도메인
+            allowed-origins:
+              - "http://localhost:3000" # 허용할 클라이언트 도메인
             allowed-methods:
               - GET
               - POST
@@ -22,7 +22,17 @@ spring:
               - "Content-Type"
               - "Authorization"
               - "X-Requested-With"
-            allow-credentials: true
+              - "Accept"
+              - "Origin"
+              - "Access-Control-Request-Method"
+              - "Access-Control-Request-Headers"
+            exposed-headers:
+              - "Authorization"
+              - "Set-Cookie"
+              - "Content-Type"
+            allow-credentials: true # 쿠키 및 인증 정보 허용
+            max-age: 3600 # Preflight 요청 캐싱 시간 (초)
+
       default-filters:
         - name: GlobalFilter
           args:
