--- a/friends-server/src/main/resources/application.yaml
+++ b/friends-server/src/main/resources/application.yaml
@@ -23,7 +23,7 @@ spring:
     database: mysql
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
   mail:
     host: smtp.gmail.com
     port: 587
