이미지 파일인지 확인하는 로직추가

--- a/config-serivce/src/main/resources/application.yml
+++ b/config-serivce/src/main/resources/application.yml
@@ -6,11 +6,9 @@ spring:
     name: config-service
   cloud:
     config:
-      server:
-        native:
-          search-locations: file://C:/home/homeless-code-config
         git:
-          uri: file://C:/home/homeless-code-config
+          uri: https://github.com/homeless-code-team/homeless-code-config.git
+          private-key: file:///C:\Users\playdata\.ssh
 
 management:
   endpoints:
