이미지 파일인지 확인하는 로직추가

--- a/config-serivce/src/main/resources/application.yml
+++ b/config-serivce/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     config:
         git:
           uri: https://github.com/homeless-code-team/homeless-code-config.git
-          private-key: file:///C:\Users\playdata\.ssh
+          private-key: file:\\C:\Users\playdata\.ssh\id_rsa.pub
 
 management:
   endpoints:
