--- a/friends-server/src/main/resources/bootstrap.yml
+++ b/friends-server/src/main/resources/bootstrap.yml
@@ -3,7 +3,7 @@
 
 spring:
   application:
-    name: user-service
+    name: friends-service
   cloud:
     config:
       uri: http://localhost:8888
