--- a/chat-service/build.gradle
+++ b/chat-service/build.gradle
@@ -62,6 +62,8 @@ dependencies {
     implementation 'javax.validation:validation-api:2.0.1.Final'
     implementation 'org.springframework:spring-websocket'
 
+    // S3
+    implementation 'io.awspring.cloud:spring-cloud-aws-s3:3.0.2'
 }
 
 dependencyManagement {
