--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,16 @@
+version: '3.8'
+
 services:
   user-service:
     build:
       context: ./user-service
       dockerfile: Dockerfile
     ports:
-      - "0:8383" # 랜덤 호스트 포트 -> 컨테이너 8383 포트
+      - "0:8383"
     environment:
       - SPRING_PROFILES_ACTIVE=dev
       - RABBITMQ_HOST=rabbitmq
-      - MYSQL_HOST=mysql
+      - MYSQL_HOST=external-mysql-host
       - MYSQL_PORT=3306
       - MYSQL_DATABASE=homeless_user
       - MYSQL_USER=root
@@ -16,19 +18,20 @@ services:
       - REDIS_HOST=redis
     depends_on:
       - rabbitmq
-      - mysql
       - redis
+    networks:
+      - msa-network
 
   friends-service:
     build:
       context: ./friends-server
       dockerfile: Dockerfile
     ports:
-      - "0:8282" # 랜덤 호스트 포트 -> 컨테이너 8282 포트
+      - "0:8282"
     environment:
       - SPRING_PROFILES_ACTIVE=dev
       - RABBITMQ_HOST=rabbitmq
-      - MYSQL_HOST=mysql
+      - MYSQL_HOST=external-mysql-host
       - MYSQL_PORT=3306
       - MYSQL_DATABASE=homeless_friends
       - MYSQL_USER=root
@@ -36,19 +39,20 @@ services:
       - REDIS_HOST=redis
     depends_on:
       - rabbitmq
-      - mysql
       - redis
+    networks:
+      - msa-network
 
   server-service:
     build:
       context: ./server-service
       dockerfile: Dockerfile
     ports:
-      - "0:8082" # 랜덤 호스트 포트 -> 컨테이너 8082 포트
+      - "0:8082"
     environment:
       - SPRING_PROFILES_ACTIVE=dev
       - RABBITMQ_HOST=rabbitmq
-      - MYSQL_HOST=mysql
+      - MYSQL_HOST=external-mysql-host
       - MYSQL_PORT=3306
       - MYSQL_DATABASE=homeless_server
       - MYSQL_USER=root
@@ -56,19 +60,20 @@ services:
       - REDIS_HOST=redis
     depends_on:
       - rabbitmq
-      - mysql
       - redis
+    networks:
+      - msa-network
 
   chat-service:
     build:
       context: ./chat-service
       dockerfile: Dockerfile
     ports:
-      - "0:8083" # 랜덤 호스트 포트 -> 컨테이너 8083 포트
+      - "0:8083"
     environment:
       - SPRING_PROFILES_ACTIVE=dev
       - RABBITMQ_HOST=rabbitmq
-      - MYSQL_HOST=mysql
+      - MYSQL_HOST=external-mysql-host
       - MYSQL_PORT=3306
       - MYSQL_DATABASE=homeless_chat
       - MYSQL_USER=root
@@ -76,15 +81,16 @@ services:
       - REDIS_HOST=redis
     depends_on:
       - rabbitmq
-      - mysql
       - redis
+    networks:
+      - msa-network
 
   gateway-service:
     build:
       context: ./gateway-service
       dockerfile: Dockerfile
     ports:
-      - "8181:8181" # 게이트웨이는 고정 포트로 설정
+      - "8181:8181"
     environment:
       - SPRING_PROFILES_ACTIVE=dev
     depends_on:
@@ -92,12 +98,15 @@ services:
       - friends-service
       - server-service
       - chat-service
+    networks:
+      - msa-network
+
   config-service:
     build:
       context: ./config-service
       dockerfile: Dockerfile
     ports:
-      - "8181:8181" # 게이트웨이는 고정 포트로 설정
+      - "8888:8888"
     environment:
       - SPRING_PROFILES_ACTIVE=dev
     depends_on:
@@ -105,32 +114,47 @@ services:
       - friends-service
       - server-service
       - chat-service
+    networks:
+      - msa-network
+
+  discovery-service:
+    build:
+      context: ./discovery-service
+      dockerfile: Dockerfile
+    ports:
+      - "8761:8761"
+    environment:
+      - SPRING_PROFILES_ACTIVE=dev
+    depends_on:
+      - user-service
+      - friends-service
+      - server-service
+      - chat-service
+    networks:
+      - msa-network
+
   rabbitmq:
     image: rabbitmq:3-management
     container_name: rabbitmq
     ports:
-      - "15672:15672" # RabbitMQ 관리 콘솔
-      - "5672:5672" # RabbitMQ 기본 포트
-
-  mysql:
-    image: mysql:8
-    container_name: mysql
-    ports:
-      - "3306:3306" # MySQL 기본 포트
-    environment:
-      MYSQL_ROOT_PASSWORD: mysql
-    volumes:
-      - mysql_data:/var/lib/mysql
-    command: --default-authentication-plugin=mysql_native_password
+      - "15672:15672"
+      - "5672:5672"
+    networks:
+      - msa-network
 
   redis:
     image: redis:7
     container_name: redis
     ports:
       - "6379:6379"
+    volumes:
+      - redis_data:/data
+    networks:
+      - msa-network
 
 volumes:
-  mysql_data:
+  redis_data:
+
 networks:
   msa-network:
-    driver: bridge # Docker의 기본 네트워크 드라이버. 동일한 호스트 내에서 통신할 수 있도록 설정.
+    driver: bridge
