gateway-service수정, 서버 초대, 초대요청 목록 구현

--- a/server-service/.gitignore
+++ b/server-service/.gitignore
@@ -1,5 +1,5 @@
 HELP.md
-.gradle
+../../../homeless-cde-msa/server-service/.gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
