--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -46,8 +46,9 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
     implementation 'software.amazon.awssdk:s3:2.20.7'
+    implementation 'javax.servlet:javax.servlet-api:4.0.1'
+
 
     //feign통신
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
