도커컴포즈 빌드에서 이미지로 변경

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,8 @@
-version: '3.8'
+version: "3.8"
 
 services:
   user-service:
-    build:
-      context: ./user-service
-      dockerfile: Dockerfile
+    image: sihyogeon/homeless-cde-msa:user-service
     ports:
       - "0:8383"
     environment:
@@ -23,9 +21,7 @@ services:
       - msa-network
 
   friends-service:
-    build:
-      context: ./friends-server
-      dockerfile: Dockerfile
+    image: sihyogeon/homeless-cde-msa:friends-service
     ports:
       - "0:8282"
     environment:
@@ -44,9 +40,7 @@ services:
       - msa-network
 
   server-service:
-    build:
-      context: ./server-service
-      dockerfile: Dockerfile
+    image: sihyogeon/homeless-cde-msa:server-service
     ports:
       - "0:8082"
     environment:
@@ -65,9 +59,7 @@ services:
       - msa-network
 
   chat-service:
-    build:
-      context: ./chat-service
-      dockerfile: Dockerfile
+    image: sihyogeon/homeless-cde-msa:chat-service
     ports:
       - "0:8083"
     environment:
@@ -86,11 +78,9 @@ services:
       - msa-network
 
   gateway-service:
-    build:
-      context: ./gateway-service
-      dockerfile: Dockerfile
+    image: sihyogeon/homeless-cde-msa:gateway-service
     ports:
-      - "8181:8181"
+      - "0:8181"
     environment:
       - SPRING_PROFILES_ACTIVE=dev
     depends_on:
@@ -102,9 +92,7 @@ services:
       - msa-network
 
   config-service:
-    build:
-      context: ./config-service
-      dockerfile: Dockerfile
+    image: sihyogeon/homeless-cde-msa:config-service
     ports:
       - "8888:8888"
     environment:
@@ -118,9 +106,7 @@ services:
       - msa-network
 
   discovery-service:
-    build:
-      context: ./discovery-service
-      dockerfile: Dockerfile
+    image: sihyogeon/homeless-cde-msa:discovery-service
     ports:
       - "8761:8761"
     environment:
