--- a/discovery-service/build.gradle
+++ b/discovery-service/build.gradle
@@ -12,6 +12,9 @@ java {
         languageVersion = JavaLanguageVersion.of(17)
     }
 }
+jar {
+    enabled = false
+}
 
 repositories {
     mavenCentral()
