--- a/chat-service/src/main/resources/application.yml
+++ b/chat-service/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     allow-bean-definition-overriding: true
   data:
     redis:
-      host: localhost
+      host: redis
       port: 6379 # Redis 서버 포트
 
 eureka:
