--- a/chat-service/src/main/resources/bootstrap.yml
+++ b/chat-service/src/main/resources/bootstrap.yml
@@ -4,6 +4,5 @@ spring:
     name: chat-service
   cloud:
     config:
-      uri: http://localhost:8888
-      # uri: http://config-service:8888
+      uri: http://config-service:8888
       profile: default
