--- a/gateway-service/src/main/resources/bootstrap.yml
+++ b/gateway-service/src/main/resources/bootstrap.yml
@@ -2,6 +2,5 @@
 spring:
   cloud:
     config:
-      uri: http://localhost:8888
-      #      uri: http://config-service:8888/
+      uri: http://config-service:8888/
       profile: default
