--- a/chat-service/src/main/resources/application.yml
+++ b/chat-service/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/ # Eureka 서버 주소
+      defaultZone: http://discovery-service:8761/eureka/ # Eureka 서버 주소
     register-with-eureka: true
     fetch-registry: true
   instance:
