--- a/config-service/src/main/resources/application.yml
+++ b/config-service/src/main/resources/application.yml
@@ -20,3 +20,7 @@ management:
     web:
       exposure:
         include: health, beans
+
+logging:
+  level:
+    org.springframework.cloud.config: debug
