--- a/config-service/src/main/resources/application.yml
+++ b/config-service/src/main/resources/application.yml
@@ -9,8 +9,8 @@ spring:
       server:
         git:
           uri: https://github.com/homeless-code-team/homeless-code-config.git
-          username: ${SPRING_CLOUD_CONFIG_SERVER_GIT_USERNAME}
-          password: ${SPRING_CLOUD_CONFIG_SERVER_GIT_PASSWORD}
+          username: si-cpu
+          password: ${GIT_ACCESSTOKEN}
           default-label: main
 
 management:
