--- a/server-service/Dockerfile
+++ b/server-service/Dockerfile
@@ -1,6 +1,8 @@
 # Step 1: Use the base image for OpenJDK
 FROM openjdk:17-jdk-slim
 
+RUN apt-get update && apt-get install -y curl
+
 # Step 2: Set the working directory in the container
 WORKDIR /app
 
